--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "supasquidds",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dawsoncanby.github.io/supasquidds",
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "0.9.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^1.1.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "deploy": "npm run build&&gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
